--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     },
     "homepage": "https://github.com/TemmieLandMC/bot#readme",
     "dependencies": {
-        "@discordjs/rest": "^0.1.0-canary.0",
-        "bufferutil": "^4.0.3",
-        "discord-api-types": "^0.23.1",
-        "discord.js": "^13.2.0",
-        "mongoose": "^6.0.12",
+        "@discordjs/rest": "^0.3.0",
+        "bufferutil": "^4.0.6",
+        "discord-api-types": "^0.27.2",
+        "discord.js": "^13.6.0",
+        "mongoose": "^6.2.2",
         "nodejs-better-console": "^1.0.2",
-        "utf-8-validate": "^5.0.5",
+        "utf-8-validate": "^5.0.8",
         "zlib-sync": "^0.1.7"
     },
     "keywords": []
